SCIP version ???
==================

fixed bugs:
- fixed memory leak in OSiL reader when using SOS constraints
- fixed issue related to SCIPcreateFiniteSolCopy not being able to remove all infinite fixings

SCIP version 4.0.0
==================

features:
- new Graph induced neighborhood search (GINS) primal heuristic that uses neighborhoods
  based on distances in the variable constraint connectivity graph.
  In addition, the heuristic supports a rolling horizon-like procedure to solve auxiliary problems
  for neighborhoods with increasing distance from the starting neighborhood.
- new primal heuristic LP face that tries to find an integer solution inside the optimal LP face.
- implemented linear time methods for (weighted) median selection for joint arrays of various types
- new statistic computed: "Root LP Estimate" that shows the root LP best-estimate with every pseudo-cost update
- new SCIP_REGRESSION data structure in pub_misc.h to incrementally compute a best-fit line through pairs of observations
- added leaf statistics about LP objective limit|feasible|infeasible leaves to the statistics output and
  to the callable library: SCIPgetNObjlimLeaves(), SCIPgetNFeasibleLeaves(), SCIPgetNInfeasibleLeaves()
- added adaptive solving behavior of SCIP based on solving phases and heuristic transitions, if enabled via "solvingphases/enabled"
- new presolving step for variables contained in a single quadratic constraint with proper square coefficients
- can now solve relaxations within probing
- will now enforce relaxation solution instead of lp or pseudosolution if lowerbound is better and the whole lp is included in the relaxation
- in case of multiple relaxators the best solution is saved instead of the last one
- can now separate perspective cuts for indicator constraints
- added write callback for reader_bnd
- added possibility to use a reference value for advanced analysis of the tree search. If a finite reference value